BUG-85244 Overview page / Recent Issues tweaks
* Also fixes navbar overlaps modal dialog (z-index issue)

--- a/dp-plugin-apps/dlm/dlm-web/src/app/common/modal-dialog/modal-dialog.component.scss
+++ b/dp-plugin-apps/dlm/dlm-web/src/app/common/modal-dialog/modal-dialog.component.scss
@@ -4,6 +4,11 @@
   }
 }
 
+.modal {
+  // navbar has z-index 2079
+  z-index: 2080;
+}
+
 .modal-dialog {
   &.small-modal {
     width: 40%;
